
* A variant of case-insensitive enum matching has been added that uses
  "toString()" instead of "name()" for the enum value. See
  "Arguments.caseInsensitiveEnumStringType(Class<T>)".

* Customized conversion of an enum to a value is now possible by
  creating a sub class of "CaseInsensitiveEnumArgumentType". See the
  existing sub classes for an example.

Help

* If you use "ArgumentParser.parseArgsOrFail(String[])" or
  "ArgumentParser.parseKnownArgsOrFail(String[], List<String>)", and
  the user requests help, the exit code will be 0 instead of 1 now.

* It is now possible to write the help text to a specific
  "PrintWriter" instead of standard output. See
  "ArgumentParser.printHelp(PrintWriter)".

* Added (optional) suppression of help for arguments and sub parsers.
  See "Argument.help(FeatureControl)" and
  "Subparser.help(FeatureControl)".

Internationalization

* Added a feature to create a parser that uses a locale other than the
  default of the JVM. See "ArgumentParserBuilder.locale(Locale)".

* Added Dutch and Russian translations.

* All user messages have been localized. argparse4j is available in
  Dutch, English, German and Russian.

* The CJK character widths have been updated to Unicode 10.

Extension modules

* An extension module for Java 7 has been added. It contains the
  following features:
  * An argument type for "java.nio.file.Path".

* An extension module for Hadoop has been added. It contains the
  following features:
  * An argument type for "org.apache.hadoop.fs.Path".

Backward compatibility

* Methods have been added to interfaces "ArgumentParser" and
  "Subparser". Classes implementing these interfaces must be updated
  and recompiled. If you use existing binary artifacts containing
  classes implementing these interfaces, and you upgrade argparse4j, a
  "NoSuchMethodError" will be thrown if one of these new methods is
  invoked. These interfaces were not meant to be implemented by client